--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,20 +1,24 @@
-name: Ruby
+name: Ruby Tests
 
-on: [push]
+on:
+  # Triggers the workflow on push or pull request events but only for the $default-branch branch
+  push:
+    branches: [ $default-branch ]
+  pull_request:
+    branches-ignore: [ $default-branch ]
 
 jobs:
-  build:
-
+  ruby_test:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        ruby-version: [2.4.x, 2.5.x, 2.6.x]
+        ruby-version: [2.6.6, 2.7.2, '3.0']
 
     steps:
     - uses: actions/checkout@v1
     - name: Set up Ruby ${{ matrix.ruby-version }}
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby-version }}
     - name: Build and test with Rake
@@ -22,3 +26,6 @@ jobs:
         gem install bundler
         bundle install --jobs 4 --retry 3
         bundle exec rspec spec
+        bundle exec cucumber features
+    - name: Run StandardRB
+      run: bundle exec standardrb --format progress
